--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="group-1">
             <div class="profile_container">
                 <div class="profile_img">
-                    <img src="/image/profile-pic.png" alt="Harsh Raolji">
+                    <img src="profile-pic.png" alt="Harsh Raolji">
                 </div>
             </div>
             <div class="profile_info">
@@ -43,16 +43,16 @@
                 <h3 class="title">Interest</h3>
                 <div class="row">
                     <div class="column">
-                        <img src="image/sports.png" alt="sports" style="width: 100%;">
+                        <img src="sports.png" alt="sports" style="width: 100%;">
                         <figcaption>sports</figcaption>
 
                     </div>
                     <div class="column">
-                        <img src="image/sports.png" alt="sports" style="width: 100%;">
+                        <img src="sports.png" alt="sports" style="width: 100%;">
                         <figcaption>sports</figcaption>
                     </div>
                     <div class="column">
-                        <img src="image/sports.png" alt="sports" style="width: 100%;">
+                        <img src="sports.png" alt="sports" style="width: 100%;">
                         <figcaption>sports</figcaption>
                     </div>
                 </div>
